feat: Migrate version to java 8 for compatibility